--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "viettqt/jet-db",
   "description": "Query builder communicate database",
   "type": "library",
+  "license": "Apache-2.0",
   "autoload": {
     "psr-4": {
       "Viettqt\\JetDB\\": "src/"
